force-app/main/default/objects/SA_Details__c/SA_Details__c.object-meta.xml
<CustomObject>
    <label>SA Details</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>SA Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>