force-app/main/default/objects/SA_Details__c/fields/Specilization__c.field-meta.xml
<CustomField>
    <fullName>Specilization__c</fullName>
    <label>Specilization</label>
    <type>TextArea</type>
</CustomField>